feat: add free and hobby plan to subscriptions
